--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,31 +1,3 @@
-// # Front-end Style Guide
-
-// ## Layout
-
-// The designs were created to the following widths:
-
-// - Mobile: 375px
-// - Desktop: 1440px
-
-// ## Colors
-
-// ### Primary
-
-// - Dark Gray: hsl(0, 0%, 63%)
-// - Black: hsl(0, 0%, 0%)
-// - White: hsl(0, 0%, 100%)
-// - Very Dark Gray: hsl(0, 0%, 27%)
-
-// ## Typography
-
-// ### Body Copy
-
-// - Font size: 12px
-
-// ### Font
-
-// - Family: [League Spartan](https://fonts.google.com/specimen/League+Spartan)
-// - Weights: 500, 600, 700
 
 $dark-gray: #a1a1a1;
 $black: hsl(0, 0%, 0%);
@@ -52,13 +24,23 @@ body{
                     position: relative;
                     overflow: hidden;
                  
-
                     .slider{
-                       transition: transform 0.3s ease;
+                        transition: transform 0.3s ease;
                         display: flex;
 
+                        // img{
+                        //     width: 400px;
+                        //     height: 400px;
+                        //     object-fit: cover;
+                        // }
+                    }
+                    
+
+                    .arrow-container-mobile{
+                        display: none;
                     }
                }
+
 
                 header{
     
@@ -69,6 +51,16 @@ body{
                     display: flex;
                     align-items: center;
                     gap: 2rem;
+
+                    nav{
+                        .close-icon{
+                            display: none;
+                        }
+                    }
+
+                    .hamburger{
+                        display: none;
+                    }
     
                     ul{
                         display: flex;
@@ -97,9 +89,10 @@ body{
 
                 .right-content-container{
                     padding: 4rem 5rem 0 5rem;
-
+                    
                     .right-content-content{
-                      
+                        width: 400px;
+
                         .header{
                             display: none;
 
@@ -108,7 +101,6 @@ body{
                                 line-height: 3rem;
                                 letter-spacing: -1px;
                                 font-weight: 600;
-                                width: 400px;
                                 display: block;
                             }
                         }
@@ -120,10 +112,6 @@ body{
                                 color: $dark-gray;
                                 display: block;
                             }
-                        }
-
-                        .header-para{
-                            
                         }
                     }
 
@@ -187,6 +175,7 @@ body{
             .first-pic{
                 background: url(/images/image-about-dark.jpg) no-repeat center;
                 width: 100%;
+                background-size: cover;
             }
 
             .second-content{
@@ -205,15 +194,195 @@ body{
             }
 
             .third-pic{
-                width: 100%;
+                width: 1800px;
                 background: url(/images/image-about-light.jpg) no-repeat center;
-                
+                background-size: cover;
             }
         }
+    }
+}
 
-        .bottom-background{
-            height: 1.9rem;
-            background-color: $black;
+@media screen and (max-width: 1024px) {
+
+    body{
+        .container{
+
+            .main-content{
+                .left-content{
+                    flex-direction: column;
+
+                    // .slider{
+                    //     img{
+                    //         height: 400px;
+                    //         object-fit: cover;
+                    //     }
+                    // }
+
+                    header{
+                        padding: 2rem 0 0 2rem;
+
+                        
+                    }
+
+                    .arrow-container{
+                        display: none;
+                    }
+
+                    .left-background{
+                        
+                        .arrow-container-mobile{
+                            display: flex;
+                            position: relative;
+                            margin-top: -3.5rem;
+                            float: right;
+
+                            img{
+                                background-color: $black;
+                                padding: 1rem 1.5rem;
+                                cursor: pointer;
+
+                                &:hover{
+                                    opacity: 70%;
+                                    transition: 300ms ease;
+                                }
+                            }
+                        }
+
+                    }
+                }
+
+                .right-content{
+                    width: 100%;
+                    justify-content: center;
+
+                    .right-content-container{
+                        padding: 3rem 2rem 4rem 2rem;
+                        
+                        .right-content-content{
+                            width: 100%;
+                            
+                            // font-size: calc();
+                            .header.active{
+                                font-size: clamp(2.2rem, 8vw, 3rem);
+                                line-height: 35px;
+                            }
+
+                            .paragraph.active{
+                                margin: 1rem 0 0 0;
+                                line-height: 25px;
+                            }
+                        }
+
+                        
+                        .shop-link{
+                            margin: 2rem 0 0 0;
+                        }
+                    }
+
+                    .arrow-container.desktop{
+                        display: none;
+                    }
+                }
+            }
+
+            .bottom-content{
+                flex-direction: column;
+
+                .first-pic{
+                    background: url(/images/image-about-dark.jpg) no-repeat center;
+                    background-size: cover;
+                    height: 300px;
+                }
+    
+                .second-content{
+                    padding: 4rem 2rem 2rem 2rem;
+    
+                    h2{
+                        text-transform: uppercase;
+                        font-size: 1.1rem;
+                        letter-spacing: 0.3rem;
+                        margin-bottom: 1rem;
+                    }
+    
+                }
+    
+                .third-pic{
+                    height: 300px;
+                    background: url(/images/image-about-light.jpg) no-repeat center;
+                    background-size: cover;
+                    width: 100%;
+                }
+            }
+        }
+    }
+  
+}
+
+@media screen and (max-width: 767px) {
+
+    body{
+        .container{
+            .main-content{
+                .left-content{
+
+        
+                    header{
+                        .hamburger{
+                            display: block;
+                            cursor: pointer;
+                        }
+            
+                        .logo{
+                            padding: 0;
+                        }
+            
+                        nav{
+                            display: none;
+                           
+                            &.active{
+                                position: fixed;
+                                background-color: white;
+                                display: flex;
+                                align-items: center;
+                                justify-content: space-between;
+                                top: 0;
+                                left: 0;
+                                right: 0;
+                                padding: 1.5rem 0 2rem 2rem;
+                                box-shadow: 0 0 10px 1000px rgba(0, 0, 0, 0.6);
+    
+                                .close-icon{
+                                    display: block;
+                                    cursor: pointer;
+                                }
+    
+                                ul{
+                                    float: right;
+
+                                    li{
+                                        a{
+                                            color: $black;
+                                            font-size: 0.825rem;
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                   
+                }
+            }
+        
+           
+        }
+    }
+}
+   
+@media screen and (max-width: 500px) {
+    .slider{
+        img{
+            height: 350px;
+            object-fit: cover;
         }
     }
 }
