--- a/styles/style.css
+++ b/styles/style.css
@@ -2,8 +2,6 @@
 body {
   font-family: "League Spartan", sans-serif;
   min-height: 100vh;
-  max-width: 1440px;
-  margin: 0 auto;
 }
 body .container .main-content {
   display: flex;
@@ -14,6 +12,7 @@ body .container .main-content .left-content {
 body .container .main-content .left-content .left-background {
   position: relative;
   overflow: hidden;
+  width: 800px;
 }
 body .container .main-content .left-content .left-background .slider {
   transition: transform 0.3s ease;
@@ -67,7 +66,7 @@ body .container .main-content .right-content .right-content-container .right-con
 }
 body .container .main-content .right-content .right-content-container .right-content-content .header.active {
   font-size: 2.7rem;
-  line-height: 3rem;
+  line-height: 35px;
   letter-spacing: -1px;
   font-weight: 600;
   display: block;
