--- a/styles/style.scss
+++ b/styles/style.scss
@@ -9,8 +9,7 @@ $very-dark-gray: hsl(0, 0%, 27%);
 body{
     font-family: 'League Spartan', sans-serif;
     min-height: 100vh;
-    max-width: 1440px;
-    margin: 0 auto;
+
 
     .container{
         
@@ -23,6 +22,7 @@ body{
                .left-background{
                     position: relative;
                     overflow: hidden;
+                    width: 800px;
                  
                     .slider{
                         transition: transform 0.3s ease;
@@ -98,7 +98,7 @@ body{
 
                             &.active{
                                 font-size: 2.7rem;
-                                line-height: 3rem;
+                                line-height: 35px;
                                 letter-spacing: -1px;
                                 font-weight: 600;
                                 display: block;
@@ -186,6 +186,7 @@ body{
                     font-size: 1.1rem;
                     letter-spacing: 0.3rem;
                     margin-bottom: 1rem;
+                    
                 }
 
                 p{
@@ -319,7 +320,7 @@ body{
 }
 
 @media screen and (max-width: 767px) {
-
+    
     body{
         .container{
             .main-content{
