--- a/styles/style.scss
+++ b/styles/style.scss
@@ -266,8 +266,8 @@ body{
                             
                             // font-size: calc();
                             .header.active{
-                                font-size: clamp(2.2rem, 8vw, 3rem);
-                                line-height: 35px;
+                                font-size: clamp(1.4rem, 9vw, 3rem);
+                                line-height: 40px;
                             }
 
                             .paragraph.active{
@@ -386,6 +386,59 @@ body{
         img{
             height: 350px;
             object-fit: cover;
+        }
+    }
+}
+
+@media screen and (max-width: 374px) {
+    body{
+        .container{
+            .main-content{
+                .left-content{
+
+        
+                    header{
+                        padding: 2rem 0 1rem 2rem;
+                        .hamburger{
+                            display: block;
+                            cursor: pointer;
+                        }
+            
+                        .logo{
+                            padding: 0;
+                        }
+            
+                        nav{
+                            display: none;
+                           
+                            &.active{
+                                
+                                padding: 1.5rem 0 1rem 2rem;
+                                box-shadow: 0 0 10px 1000px rgba(0, 0, 0, 0.6);
+    
+                                .close-icon{
+                                    display: block;
+                                    cursor: pointer;
+                                }
+    
+                                ul{
+                                    float: right;
+
+                                    li{
+                                        a{
+                                            color: $black;
+                                            font-size: 0.525rem;
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                   
+                }
+            }
+        
+           
         }
     }
 }
